--- a/app/src/main/res/drawable/rounded_button_right.xml
+++ b/app/src/main/res/drawable/rounded_button_right.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <corners android:radius="8dp" /> <!-- 设置与你的原矩形框相同的圆角 -->
-    <solid android:color="#FF4CAF50" /> <!-- 正确选项的颜色 -->
+    <corners android:radius="8dp" />
+    <solid android:color="#FF4CAF50" />
 </shape>
