--- a/app/src/main/res/layout/fragment_question5.xml
+++ b/app/src/main/res/layout/fragment_question5.xml
@@ -36,7 +36,7 @@
             android:background="@drawable/rounded_button_default"
             android:gravity="center"/>
         <RadioButton
-            android:id="@+id/option2"
+            android:id="@+id/option2_5"
             android:text="William Shakespeare"
             android:layout_width="288dp"
             android:layout_height="52dp"
@@ -56,7 +56,7 @@
             android:background="@drawable/rounded_button_default"
             android:gravity="center"/>
         <RadioButton
-            android:id="@+id/option4"
+            android:id="@+id/option4_5"
             android:text="Jane Austen"
             android:layout_width="288dp"
             android:layout_height="52dp"
